nget (0.??) unstable; urgency=low

  * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
  * Remove autoconf AC_C_CONST, its only for C progs and breaks g++.

 -- ??

nget (0.13.2) unstable; urgency=low

  * Add trailing / onto NGETHOME var so you don't need to.
  * Fix compile on Redhat 7.0.  (#defined PROTOTYPES before including uudeview)
  * Added usegz .ngetrc option. (global and per-group)
  * Added exit code setting on non-fatal errors and printout of number of errors. (lemme know if you find some other errors that you think should be reported this way.)
  * ngetlite uses ngetlite.<pid> (instead of .tmp), allowing multiple ngetlite processes to run in the same dir.
  * ngetlite checks for bytes +-3 like nget.
  * fix signed/unsigned error in cache.cc that caused "no host selected" errors if using a serverid larger than would fit in a signed int.

 -- Matt Mueller <donut@azstarnet.com>  Thu,  8 Feb 2001 04:24:08 -0700
 
nget (0.13.1) unstable; urgency=low

  * Use write to tempfile then rename for saving cache and midinfo.
  * Made some forgotten printfs ("was gonna add...") into PDEBUGs.
  * Use $(MAKE) instead of make for making subdirs. (Howard Jones)

 -- Matt Mueller <donut@azstarnet.com>  Mon,  8 Jan 2001 16:36:31 -0700

nget (0.13) unstable; urgency=low

  * Locks midinfo files better.  Previous versions would not have corruption,
    but would lose one of the updates, if two nget instances tried to
    update the midinfo file at the same time.
  * Added -m option to optionally make directories that do not exist for
    -p and -P.

 -- Matt Mueller <donut@azstarnet.com>  Tue,  5 Sep 2000 21:41:16 -0700
  
nget (0.12) unstable; urgency=low

  * Fixed segfault on invalid param to -F
  * Deletes tempfile on drive full error.  (Otherwise the useless
    truncated file may cause annoyances later)
  * On unequal line count errors, will now try other servers or give up, 