@@ -2,6 +2,7 @@ nget (0.??) unstable; urgency=low
 
   * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
   * Remove autoconf AC_C_CONST, its only for C progs and breaks g++.
+  * Fixed east/west of GMT timezone discrepancy if timezone var not found by configure.
 
  -- ??
 
